--- a/spec/system/createInitialState.spec.yaml
+++ b/spec/system/createInitialState.spec.yaml
@@ -42,7 +42,7 @@ out:
         enabled: false
     saveSlots: {}
     layeredViews: []
-    globalAndDeviceVariables: {}
+    variables: {}
   projectData:
     story:
       initialSceneId: "scene1"
@@ -77,7 +77,7 @@ case: merge loaded globalAndDeviceVariables with defaults
 in:
   - global:
       currentLocalizationPackageId: "en"
-      globalAndDeviceVariables:
+      variables:
         volume: 80
         achievement1: true
     projectData:
@@ -85,15 +85,15 @@ in:
         variables:
           volume:
             type: number
-            scope: device
+            scope: global-device
             default: 50
           achievement1:
             type: boolean
-            scope: global
+            scope: global-account
             default: false
           newVariable:
             type: string
-            scope: device
+            scope: global-device
             default: "default"
       story:
         initialSceneId: "scene1"
@@ -127,7 +127,7 @@ out:
         enabled: false
     saveSlots: {}
     layeredViews: []
-    globalAndDeviceVariables:
+    variables:
       volume: 80
       achievement1: true
       newVariable: "default"
@@ -136,15 +136,15 @@ out:
       variables:
         volume:
           type: number
-          scope: device
+          scope: global-device
           default: 50
         achievement1:
           type: boolean
-          scope: global
+          scope: global-account
           default: false
         newVariable:
           type: string
-          scope: device
+          scope: global-device
           default: "default"
     story:
       initialSceneId: "scene1"
