--- a/src/schemas/projectData/resources.yaml
+++ b/src/schemas/projectData/resources.yaml
@@ -312,7 +312,7 @@ properties:
             enum: [string, boolean, number]
           scope:
             type: enum
-            enum: [runtime, device, global]
+            enum: [context, global-device, global-account]
           default:
             description: Default initial value for the variable
             oneOf:
