--- a/spec/system/createInitialState.spec.yaml
+++ b/spec/system/createInitialState.spec.yaml
@@ -73,7 +73,7 @@ out:
         resourceId: __undefined__
       variables: {}
 ---
-case: merge loaded globalAndDeviceVariables with defaults
+case: merge loaded global variables with defaults
 in:
   - global:
       currentLocalizationPackageId: "en"
